# latex-plot-styles

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: push_release_to_pypi.yml
src/latex_plot_style/: __init__.py  configs.py  figure_size.py  matplotlib_style.py
src/latex_plot_styles/: configs.py  matplotlib_style.py
